SERVER-62855 MigrationDestinationManager should not blindly dereference _sessionMigration on recovery error handling